ecmascript/parser/tests/test262-error-references/fail/0dbe57298be12eac.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/0dbe57298be12eac.js:1:7
  |
1 | var x,;
  |       ^

